@@ -27,7 +27,7 @@
 JSVALUE_MODEL = $(JSVALUE_MODEL_$(CURRENT_ARCH));
 JSVALUE_MODEL_ = UNKNOWN_JSVALUE_MODEL;
 JSVALUE_MODEL_armv6 = 32;
-JSVALUE_MODEL_armv7 = 32;
+JSVALUE_MODEL_armv7 = 32_64;
 JSVALUE_MODEL_i386 = 32_64;
 JSVALUE_MODEL_ppc = 32_64;
 JSVALUE_MODEL_ppc64 = 32;
